bulk of basic scope control GUI code written and working.

--- a/Makefile.scopecmd
+++ b/Makefile.scopecmd
@@ -14,6 +14,7 @@ LIBS += `pkg-config --libs libusb-1.0`
 
 OBJS = obj/scopecmd.cpp.o
 OBJS += obj/cfgmap.cpp.o
+OBJS += obj/netcomm.cpp.o
 OBJS += obj/freetmc_local.cpp.o
 OBJS += obj/freetmc_remote.cpp.o
 
